# LocalTool

./: .gitignore  LICENSE  README.md  pyproject.toml
localtool/: base64.py  core.py  gt.py  httpd.py  ip.py  main.py
localtool/mailer/: __init__.py  app.py  config.py  dialogs.py  mail.py  style.py  widgets.py  window.py  workers.py
localtool/tools/: __init__.py  base64.py  color.py  deepseek.py  exif.py  gt.py  hash.py  httpd.py  ip.py  ll.py
