[project]
name = "localtool"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "cryptography",
    "pillow",
    "pyqt6",
    "pyqt6-webengine>=6.11.0",
]

[project.scripts]
localtool = "localtool.main:main"
hash = "localtool.hash:run"
ip = "localtool.ip:run"
httpd = "localtool.httpd:run"
ll = "localtool.ll:run"
gt = "localtool.gt:run"
email = "localtool.mailer:run"
color = "localtool.color:run"
base64 = "localtool.base64:run"
deepseek = "localtool.deepseek:run"
exif = "localtool.exif:run"
