[project]
name = "localtool"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "cryptography",
    "pillow",
    "pyqt6",
    "pyqt6-webengine>=6.11.0",
]

[project.scripts]
localtool = "localtool.main:main"
email = "localtool.mailer:run"
gt = "localtool.tools.gt:run"
hash = "localtool.tools.hash:run"
httpd = "localtool.tools.httpd:run"
ip = "localtool.tools.ip:run"
ll = "localtool.tools.ll:run"
color = "localtool.tools.color:run"
base64 = "localtool.tools.base64:run"
deepseek = "localtool.tools.deepseek:run"
exif = "localtool.tools.exif:run"
